@@ -19,7 +19,7 @@ javafx {
 run {
     doFirst {
         jvmArgs = [
-                '--module-path', classpath.asPath,
+                '--module-path', System.getenv('PATH_TO_FX') ?: 'D:/Java/JavaFX/javafx-sdk-23/lib',
                 '--add-modules', 'javafx.controls,javafx.fxml'
         ]
     }
@@ -32,10 +32,15 @@ startScripts {
 tasks.withType(AbstractArchiveTask) {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
+java {
+    sourceCompatibility = '23'
+    targetCompatibility = '23'
+}
 
-// Không cần cấu hình module path vì đã vô hiệu hóa Java Module System
-//mainClassName = 'Main'
-mainClassName = 'iuh.fit.App'
+application {
+    mainClass = 'iuh.fit.App'
+}
+
 ext {
     junitVersion = '5.10.2'
 }
@@ -56,7 +61,7 @@ dependencies {
     implementation('org.hibernate:hibernate-core:6.0.2.Final')
     implementation('org.glassfish.jaxb:jaxb-runtime:3.0.2')
 
-    implementation (files("libs/LTPTJava_GiaVanVa_HK2-2024-2025-1.0-SNAPSHOT.jar"))
+    implementation (files("libs/LTPTJava_GiaVanVa_HK2.jar"))
 
     // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.1'
@@ -74,11 +79,23 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
-    implementation 'org.openjfx:javafx-controls:21'
-    implementation 'org.openjfx:javafx-fxml:21'
+    implementation 'org.openjfx:javafx-controls:23'
+    implementation 'org.openjfx:javafx-fxml:23'
 
 }
 
 test {
     useJUnitPlatform()
+}
+task App(type: JavaExec) {
+    group = "application"
+    description = "Run App"
+    mainClass = "iuh.fit.App"
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = [
+            "--module-path", configurations.runtimeClasspath.asPath,
+            "--add-modules", "javafx.controls,javafx.fxml",
+            "-Djava.security.policy=${projectDir}/rmi.policy",
+            "-Djava.rmi.server.hostname=LAPTOP-O8OOBHDK"
+    ]
 }
